# riscv-emulator

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: format.rs  init_insn.rs  lib.rs
proc_macros/: Cargo.toml
proc_macros/src/: derive_insn.rs  lib.rs
src/: cpu.rs  main.rs  mmu.rs  page.rs  trap.rs
src/device/: bus.rs  clint.rs  memory.rs  mod.rs  plic.rs  uart.rs  virtio.rs
src/isa/: mod.rs  rva.rs  rvi.rs  rvm.rs
src/register/: csrs.rs  medeleg.rs  mideleg.rs  mie.rs  mip.rs  mod.rs  mstatus.rs  satp.rs  sstatus.rs  xs.rs  xtvec.rs
